tests/asm-link/line-continuation-at-eof/rgbasm.err
error: line continuation at end of input
   ╭─[ test.asm:1:19 ]
   │
 1 │ assert 1 + 1 == 2 \
   │                   ┬  
   │                   ╰── this should be followed by a newline, or removed
───╯
1 error generated.
